--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,16 @@ Package: CarbonPolicySim
 Title: Carbon Market Simulation Using Agent-Based Models
 Version: 0.0.0.9000
 Authors@R: 
-    person("Ankit", "Sharma", email = "your.email@example.com", role = c("aut", "cre"),
+    person("Ankit", "Sharma", email = "email@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: This package provides tools to simulate carbon markets using agent-based models. 
-    It includes classes and methods for facilities, marginal abatement cost curves (MACC), 
-    and other carbon market components.
-License: MIT
+Description: This package provides tools to simulate carbon markets using agent-based models.offering 
+    flexibility for modeling and simulation tasks.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports:
-    R6
-
-
+    methods
+Suggests:
+    testthat (>= 3.0.0)
+LazyData: true
